--- a/style.css
+++ b/style.css
@@ -282,6 +282,57 @@ width: 80%;
     padding: 10px;
 }
 
+.section-projetos {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    margin: 20px;
+    color: #FFF;
+    text-align: center;
+    font-family: "DM Sans";
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+}
+
+.projetos {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 25px;
+    flex-wrap: wrap;
+}
+
+.card-projeto {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+    gap: 10px;
+    background: #333333;
+    border-radius: 8px;
+    width: 350px;
+    height: 240px;
+    text-decoration: none;
+}
+
+.card-projeto p {
+    color: #828282;
+    font-size: 18px;
+}
+
+.cardimg {
+    background: #171717;
+    width: 300px;
+    height: 130px;
+    border-radius: 8px;
+    border: 1px solid #333;
+}
+
 
 
 
@@ -323,5 +374,9 @@ width: 80%;
     .btns {
         width: 90vw;
         justify-content: center;
+    }
+
+    .badges{
+        flex-direction: column;
     }
 }
